# chip8-emulator-cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt
include/: audio.hpp  chip8.hpp
src/: audio.cpp  chip8.cpp  main.cpp
